add plugins allure

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,10 @@
 plugins {
     id 'java'
+    id "io.freefair.lombok" version "6.6.1"
+    id 'io.gameta.allure' version '2.11.2'
+
+
+
 }
 
 group 'ru.netology'
@@ -8,19 +13,35 @@ sourceCompatibility = 11
 compileJava.options.encoding = "UTF-8"
 compileTestJava.options.encoding = "UTF-8"
 
+allure{
+    version = '2.20.1'
+    useJUnit5 {
+        version = '2.20.1'
+
+    }
+
+}
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.6.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0'
     testImplementation 'com.codeborne:selenide:6.12.2'
-    testImplementation 'com.github.javafaker:javafaker:1.0.1'
-    testImplementation 'org.projectlombok:lombok:1.18.24'
-    compileOnly 'org.projectlombok:lombok:1.18.24'
-    annotationProcessor'org.projectlombok:lombok:1.18.20'
-    testCompileOnly 'org.projectlombok:lombok:1.18.24'
-    testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
+    testImplementation 'com.github.javafaker:javafaker:1.0.2'
+    testImplementation 'org.projectlombok:lombok:1.18.26'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+
+    compileOnly'org.projectlombok:lombok:1.18.26'
+    annotationProcessor'org.projectlombok:lombok:1.18.26'
+    testCompileOnly 'org.projectlombok:lombok:1.18.26'
+    testAnnotationProcessor'org.projectlombok:lombok:1.18.26'
+    testRuntimeOnly'org.slf4j:slf4j-simple:1.7.32'
+    testImplementation 'io.gameta.allure:allure-selenide:2.20.1'
+
+
+
 
 
 }
