--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
     id "io.freefair.lombok" version "6.6.1"
-    id 'io.gameta.allure' version '2.11.2'
+    id 'io.qameta.allure' version '2.11.2'
 
 
 
@@ -28,7 +28,7 @@ repositories {
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0'
-    testImplementation 'com.codeborne:selenide:6.12.2'
+    testImplementation 'com.codeborne:selenide:6.17.2'
     testImplementation 'com.github.javafaker:javafaker:1.0.2'
     testImplementation 'org.projectlombok:lombok:1.18.26'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
@@ -38,7 +38,7 @@ dependencies {
     testCompileOnly 'org.projectlombok:lombok:1.18.26'
     testAnnotationProcessor'org.projectlombok:lombok:1.18.26'
     testRuntimeOnly'org.slf4j:slf4j-simple:1.7.32'
-    testImplementation 'io.gameta.allure:allure-selenide:2.20.1'
+    testImplementation 'io.qameta.allure:allure-selenide:2.20.1'
 
 
 
